Updated login.html file

--- a/tshirt/tshirtapp/templates/tshirtapp/login.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/login.html
@@ -1,1 +1,12 @@
-<h2>Hello</h2>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <label>Username:</label>
+        <input type="text"><br><br>
+        <label>Password:</label>
+        <input type="password"><br><br>
+        <input type="submit" value="Submit">
+    </body>
+</html>
