--- a/tshirt/tshirtapp/templates/tshirtapp/signup.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/signup.html
@@ -1,1 +1,16 @@
-<h1>SIGNUP</h1>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>SIGNUP FORM</h1>
+        <form>
+            First Name: <input type='text' name='firstname'/><br/></br>
+            Last Name: <input type='text' name='lastname'/></br></br>
+            Email: <input type='email' name='email'/><br/></br>
+            Password: <input type='password' name='firstname'/><br/></br>
+            Confirm Password: <input type='password' name='firstname'/><br/></br>
+            <input type='submit' value="Submit"
+        </form>
+    </body>
+</html>
