--- a/tshirt/tshirtapp/templates/tshirtapp/index.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>What's up BITCHAASSSSS!</h1>
         <h2>HI</h2>
         <h3>Hola</h3>
     </body>
