--- a/tshirt/tshirtapp/templates/tshirtapp/signup.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/signup.html
@@ -8,6 +8,7 @@
             {% csrf_token %}
             First Name: <input type='text' name='firstname'/><br/></br>
             Last Name: <input type='text' name='lastname'/></br></br>
+            Username: <input type='text' name='username'/></br></br>
             Email: <input type='email' name='email'/><br/></br>
             Password: <input type='password' name='password'/><br/></br>
             Confirm Password: <input type='password' name='cpassword'/><br/></br>
