--- a/tshirt/tshirtapp/static/tshirtapp/style.css
+++ b/tshirt/tshirtapp/static/tshirtapp/style.css
@@ -47,3 +47,68 @@ body{
 .box input[type="submit"]:hover{
 	background: #2ecc71;
 }
+
+.form-box{
+	width: 300px;
+	position: absolute;
+	background: white;
+	padding: 40px;
+	top: 50%;
+	left: 50%;
+	border-radius: 25px;
+	box-shadow: 10px 10px #131720;
+	transform: translate(-50%, -50%); 
+	text-align: center;
+}
+.form-box a{
+	text-decoration: none;
+}
+
+.form-box a:hover{
+	color: #2ecc71;
+}
+
+.form-box h1{
+	color: black;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+
+.form-box input[type = "text"], .form-box input[type = "password"]{
+	border: 0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border: 2px solid #3a4660;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: black;
+	border-radius: 24px;
+	transition: 0.25s;
+}
+
+.form-box input[type = "text"]:focus, .form-box input[type = "password"]:focus{
+	width: 280px;
+	border-color: #2ecc71;
+}
+
+.form-box input[type = "submit"]{
+	border: 0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border: 2px solid #2ecc71;
+	padding: 14px 40px;
+	outline: none;
+	color: black;
+	border-radius: 24px;
+	transition: 0.25s;
+	cursor: pointer;
+}
+
+.form-box input[type = "submit"]:hover{
+	background: #2ecc71;
+}
