--- a/tshirt/tshirtapp/templates/tshirtapp/login.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/login.html
@@ -13,7 +13,7 @@
 				<input type="text" name="username" placeholder="Username">
 				<input type="password" name="password" placeholder="Password">
                 <input type="submit" value="Login">
-                or Signup using <a href="signup">Signup</a>
+                or Register using <a href="signup"><strong>Signup</strong></a>
 			</div>
         </form>
     </body>
