corrrect dusplay mencategory

--- a/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
@@ -3,10 +3,10 @@
     {% for menobj in menobjs %}
 
     <img src="{{menobj.Image}}" >
-    <h3>{{menobj.Name}}</h3>
-    <h3>{menobj.Brand}}</h3>{
-    <h3>{menobj.Size}}</h3>{
-    <h3>{{menobj.Price}}</h3>
+    <h4>{{menobj.Name}}</h4>
+    <h4>{{menobj.Brand}}</h4>
+    <h4>{{menobj.Size}}</h4>
+    <h4>{{menobj.Price}}</h4>
     {% endfor %}
     </body>
 </html>
