--- a/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
@@ -1,12 +1,23 @@
+{% load static %}
 <html>
+    <head>
+        <title>Welcome to TshirtShack</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'tshirtapp/style.css' %}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>   
+    </head>
     <body>
     {% for menobj in menobjs %}
 
-    <img src="{{menobj.Image}}" >
+    <img src="{{menobj.Image.url}}">
     <h4>{{menobj.Name}}</h4>
     <h4>{{menobj.Brand}}</h4>
     <h4>{{menobj.Size}}</h4>
     <h4>{{menobj.Price}}</h4>
     {% endfor %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
     </body>
 </html>
