--- a/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
@@ -7,14 +7,18 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>   
     </head>
     <body>
-    {% for menobj in menobjs %}
 
+    <div class='display_dabba'>
+    
+    {% for menobj in menobjs %}
     <img src="{{menobj.Image.url}}">
     <h4>{{menobj.Name}}</h4>
     <h4>{{menobj.Brand}}</h4>
     <h4>{{menobj.Size}}</h4>
     <h4>{{menobj.Price}}</h4>
     {% endfor %}
+    </div>  
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
