--- a/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/mencategory.html
@@ -16,7 +16,9 @@
     <h4>{{menobj.Brand}}</h4>
     <h4>{{menobj.Size}}</h4>
     <h4>{{menobj.Price}}</h4>
+    <button>Add to cart</button>
     {% endfor %}
+    
     </div>  
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
