Shopping cart part 1

--- a/tshirt/tshirtapp/templates/tshirtapp/women.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/women.html
@@ -7,7 +7,7 @@
         <script type = 'text/javascript'>
             var user = '{{request.user}}'
 
-            function getCookie(name) {
+            function getToken(name) {
                 let cookieValue = null;
                 if (document.cookie && document.cookie !== '') {
                         const cookies = document.cookie.split(';');
@@ -22,7 +22,7 @@
     }
     return cookieValue;
 }
-const csrftoken = getCookie('csrftoken');
+const csrftoken = getToken('csrftoken');
 
         </script>
     </head>
