Men and Women combined to make Product table

--- a/tshirt/tshirtapp/templates/tshirtapp/women.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/women.html
@@ -11,12 +11,14 @@
     <div class='display_dabba'>
     
     {% for womenobj in womenobjs %}
+    {% if womenobj.Gender == 'F' %}
     <img src="{{womenobj.W_Image.url}}">
-    <h4>{{womenobj.W_Name}}</h4>
-    <h4>{{womenobj.W_Brand}}</h4>
-    <h4>{{womenobj.W_Size}}</h4>
-    <h4>{{womenobj.W_Price}}</h4>
+    <h4>{{womenobj.Name}}</h4>
+    <h4>{{womenobj.Brand}}</h4>
+    <h4>{{womenobj.Size}}</h4>
+    <h4>{{womenobj.Price}}</h4>
     <button>Add to cart</button>
+    {% endif %}
     {% endfor %}
     </div>  
     
