--- a/tshirt/tshirtapp/templates/tshirtapp/checkout.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/checkout.html
@@ -67,9 +67,9 @@
             <hr>
             {% for item in items %}
             <div class="cart-row">
-                <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
-                <div style="flex:2"><p>{{item.product.name}}</p></div>
-                <div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
+                <div style="flex:2"><img class="row-image" src="{{item.product.Image.url}}"></div>
+                <div style="flex:2"><p>{{item.product.Name}}</p></div>
+                <div style="flex:1"><p>${{item.product.Price|floatformat:2}}</p></div>
                 <div style="flex:1"><p>x{{item.quantity}}</p></div>
             </div>
             {% endfor %}
