--- a/tshirt/tshirtapp/templates/tshirtapp/women.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/women.html
@@ -11,12 +11,12 @@
     <div class='display_dabba'>
     
     {% for womenobj in womenobjs %}
-    <img src="{{womenobj.W_Image.url}}">
-    <h4>{{womenobj.W_Name}}</h4>
-    <h4>{{womenobj.W_Brand}}</h4>
-    <h4>{{womenobj.W_Size}}</h4>
-    <h4>{{womenobj.W_Price}}</h4>
-    <button>Add to cart</button>
+    <img src="{{womenobj.Image.url}}">
+    <h4>{{womenobj.Name}}</h4>
+    <h4>{{womenobj.Brand}}</h4>
+    <h4>{{womenobj.Size}}</h4>
+    <h4>{{womenobj.Price}}</h4>
+    <button data-product={{women.id}} data-action="add"class="update-cart">Add to cart</button>
     {% endfor %}
     </div>  
     
