--- a/tshirt/tshirtapp/templates/tshirtapp/index.html
+++ b/tshirt/tshirtapp/templates/tshirtapp/index.html
@@ -4,7 +4,29 @@
         <title>Welcome to TshirtShack</title>
         <link rel="stylesheet" type="text/css" href="{% static 'tshirtapp/style.css' %}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>   
+
+        <script type="text/javascript">
+          var user='{{request.user}}'
+
+          function getToken(name) {
+		        var cookieValue = null;
+		        if (document.cookie && document.cookie !== '') {
+		          var cookies = document.cookie.split(';');
+		          for (var i = 0; i < cookies.length; i++) {
+		              var cookie = cookies[i].trim();
+		              // Does this cookie string begin with the name we want?
+		              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+		                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+		                break;
+		            }
+		        }
+		    }
+		    return cookieValue;
+		  }
+		    var csrftoken = getToken('csrftoken')
+        </script>
+
+    </head>
     </head>
     <body>
       <header>
@@ -76,8 +98,10 @@
 
     </header>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>   
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     
+      <script type="text/javascript" src="{% static 'tshirtapp/js/cart.js' %}" ></script>
     </body>
 </html>
